fix: gap between Nav elements and active color

--- a/public/assets/styles/variables.scss
+++ b/public/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $primary-color: #2A3647;
 
 $color-blue: #007cee;
 $color-light-blue: #29abe2;
+$color-dark-blue: rgba(12, 53, 90, 0.784);
 $color-white: #ffffff;
 $color-gray: #e0dfdf;
 $color-light-gray: #f6f7f8;
